Updated base